@@ -1,5 +1,6 @@
 Changes for 1.8.1
 
+ - [ZBX-1742] fixed processing of "system.uptime" check under Windows to return values as integers (Dmitry)
  - [ZBX-1786] fixed not remembered group when use paging in export screen (Vedmak)
  - [ZBX-1735] added "ERROR" words to some error messages in data cache module (Dmitry)
  - [ZBX-1321] fixed displaying of large unsigned int values in latest data (Vedmak)
